# readelf

./: CMakeLists.txt  UnityConfig.cpp  UnityConfig.sln  UnityConfig.vcxproj  UnityConfig.vcxproj.filters  UnityConfigFile.cpp  UnityConfigFile.h  globalgamemanagers
bfd/: Makefile  config.cache  config.h  config.status  libbfd.la  libtool
bfd/doc/: Makefile
bfd/po/: Makefile  Makefile.in
binutils/: Makefile  config.cache  config.status  libtool  readelf.c
binutils/.deps/: addr2line.Po  ar.Po  arparse.Po  arsup.Po  bfdtest1.Po  bfdtest2.Po  binemul.Po  bucomm.Po  cxxfilt.Po  debug.Po  dwarf.Po  elfcomm.Po  elfedit.Po  emul_vanilla.Po  filemode.Po  ieee.Po  nm.Po  objcopy.Po  objdump.Po  prdbg.Po  rdcoff.Po  rddbg.Po  readelf.Po  rename.Po  size.Po  stabs.Po  strings.Po  unwind-ia64.Po  version.Po  wrstabs.Po
binutils/doc/: Makefile
binutils/po/: Makefile  Makefile.in
configfile/: global5.4.txt  global5.6.0b11.txt  global5.6.0b8.txt
etc/: config.status
gas/: Makefile  config.cache  config.status  libtool
gas/.deps/: app.Po  as.Po  atof-generic.Po  atof-ieee.Po  compress-debug.Po  cond.Po  depend.Po  dw2gencfi.Po  dwarf2dbg.Po  ecoff.Po  ehopt.Po  expr.Po  flonum-copy.Po  frags.Po  hash.Po  input-file.Po  input-scrub.Po  listing.Po  literal.Po  macro.Po  messages.Po  obj-elf.Po  output-file.Po  read.Po  remap.Po  sb.Po  stabs.Po  subsegs.Po  symbols.Po  tc-i386.Po  write.Po
gas/doc/: Makefile
gas/po/: Makefile  Makefile.in
gprof/: Makefile  config.cache  config.status  libtool
gprof/.deps/: aarch64.Po  alpha.Po  basic_blocks.Po  bsd_callg_bl.Po  call_graph.Po  cg_arcs.Po  cg_dfn.Po  cg_print.Po  corefile.Po  flat_bl.Po  fsf_callg_bl.Po  gmon_io.Po  gprof.Po  hertz.Po  hist.Po  i386.Po  mips.Po  search_list.Po  source.Po  sparc.Po  sym_ids.Po  symtab.Po  tahoe.Po  utils.Po  vax.Po
gprof/po/: Makefile  Makefile.in
intl/: Makefile  config.cache  config.status
ld/: Makefile  config.cache  config.status  libtool
ld/.deps/: eelf32_x86_64.Po  eelf_i386.Po  eelf_iamcu.Po  eelf_k1om.Po  (+23 more)
libiberty/: Makefile  config.cache  config.status
opcodes/: Makefile  config.cache  config.status  libtool
parseso/: ParseSo.cpp  elf.h
readelf/: ReadELF.cpp  arm.h  bfd.h  dwarf2.cpp  dwarf2.h  elf.h  hash.cpp  objalloc.cpp  objalloc.h  relocate.cpp  relocate.h  section.cpp
src/: CTest.cpp  CTest.h  main.cpp  main2.cpp
test/: config.cpp  configFile.cpp  configFile.h
unity/: UnityConfig.cpp  UnityConfigFile.cpp  UnityConfigFile.h
zlib/: Makefile  config.cache  config.status  libtool
(+14 files in other folders)
